fix spacing and background color

--- a/assets/scss/components/_testimonial.scss
+++ b/assets/scss/components/_testimonial.scss
@@ -2,7 +2,6 @@
     max-width: 600px;
     margin: 0 auto;
     height: 100%;
-    background-color: $white-offset;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
     position: relative;
     font-family: "Noto Sans", sans-serif;
